// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteListView component should display an empty list when no note 1`] = `<WithTheme(NoteListViewWithoutTheme) />`;

exports[`NoteListView component should display title note when 1 note 1`] = `
<WithTheme(NoteListViewWithoutTheme)
  notes={
    Array [
      Object {
        "title": "my title",
      },
    ]
  }
/>
`;

exports[`NoteListView component should display title note when 2 notes 1`] = `
<WithTheme(NoteListViewWithoutTheme)
  notes={
    Array [
      Object {
        "title": "my title",
      },
      Object {
        "title": "my title 2",
      },
    ]
  }
/>
`;

exports[`NoteListView component should display title note when many notes 1`] = `
<WithTheme(NoteListViewWithoutTheme)
  notes={
    Array [
      Object {
        "title": "my title 0",
      },
      Object {
        "title": "my title 1",
      },
      Object {
        "title": "my title 2",
      },
      Object {
        "title": "my title 3",
      },
      Object {
        "title": "my title 4",
      },
      Object {
        "title": "my title 5",
      },
      Object {
        "title": "my title 6",
      },
      Object {
        "title": "my title 7",
      },
      Object {
        "title": "my title 8",
      },
      Object {
        "title": "my title 9",
      },
      Object {
        "title": "my title 10",
      },
      Object {
        "title": "my title 11",
      },
      Object {
        "title": "my title 12",
      },
      Object {
        "title": "my title 13",
      },
      Object {
        "title": "my title 14",
      },
      Object {
        "title": "my title 15",
      },
      Object {
        "title": "my title 16",
      },
      Object {
        "title": "my title 17",
      },
      Object {
        "title": "my title 18",
      },
      Object {
        "title": "my title 19",
      },
    ]
  }
/>
`;
